@@ -12,7 +12,11 @@ For a complete change history, please see the Subversion log comments.
 
 Current Version (SVN Trunk):
 ---------------------------
+
+- Fixed problems with fonts in PDF output (#2142)
+
 - AGG: smooth font shadows
+
 
 Version 5.0.0-beta5 (2007-08-22)
 --------------------------------
